fix no-wrap for desktop only

--- a/app/assets/stylesheets/grid.scss
+++ b/app/assets/stylesheets/grid.scss
@@ -110,3 +110,15 @@
     width: 100%;
   }
 }
+
+@media screen and (min-width: 500px) {
+  .desktop-nowrap {
+    flex-wrap: nowrap;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .mobile-nowrap {
+    flex-wrap: nowrap;
+  }
+}
